# Jarvis_Work

./: .gitignore  Elira.bat  Elira_Mobile.bat  Jarvis.bat  Jarvis_Mobile.bat  README.md  README.txt  README_Elira_AI.md  README_FULL_REPO_LAUNCH_FIX.txt  README_INSTALL.txt  README_PHASE15_BUNDLE.txt  README_PHASE16_PATCH.txt  README_PHASE17_2.txt  README_PHASE17_3.txt  README_PHASE17_8.txt  README_PHASE17_9.txt  README_PHASE17_CUSTOM.txt  README_PHASE17_PATCH.txt  README_PHASE18.txt  README_PHASE18_1.txt  README_PHASE18_2.txt  README_PHASE18_3.txt  README_PHASE19.txt  README_PHASE19_1.txt  README_PHASE19_2.txt  README_PHASE20_1.txt  README_PHASE20_2.txt  README_PHASE20_3.txt  README_PHASE20_4.txt  README_PHASE21.txt  README_PHASE21_1.txt  README_STABILIZATION_BUGFIX_PACK_1.txt  README_STABILIZATION_BUGFIX_PACK_2.txt  README_UI_WORK_FIX_PACK_2.txt  build_exe.bat  package-lock.json  package.json  run_tauri_dev.bat
backend/: .env.example  requirements-optional.txt  requirements.txt
backend/app/: main.py  (+1 more)
data/: agent_monitor.db  agent_registry.db  elira_state.db  event_bus.db  library.db  memory_store.json  rag_memory.db  response_cache.db  run_history.db  run_history.json  smart_memory.db  workflow_engine.db
docs/: ACTUAL_WORK.md  AGENT_OS_WORKPLAN.md  README.md  README_FIX.md  ROADMAP_STABILIZATION_2026-03-29.md  STAGE3_REACT_VITE.md  STAGE4_README.md  STAGE5_MEMORY.md  deep-research-report (END Point Agent).md
frontend/: index.html  package-lock.json  package.json  vite.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  Запуск Агента.py
(+192 files in other folders)
