[package]
name = "jarvis-desktop"
version = "0.1.0"
description = "Jarvis Work desktop shell"
authors = ["OpenAI"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "1", features = [ "shell-open", "http-all"] }
